--- a/axios/test/mini.html
+++ b/axios/test/mini.html
@@ -2,12 +2,18 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Document</title>
+        <title>Axios Tests</title>
     </head>
     <body>
         <script src="../mini/axios.js"></script>
         <script>
-            axios('https://api.github.com/users/mzabriskie', (resp) => {
+            axios({
+                url: 'http://localhost:3001/info/list',
+                success(resp) {
+                    console.log(resp)
+                }
+            })
+            axios('http://localhost:3001', (resp) => {
                 console.log(resp)
             })
         </script>
